# meg_room

./: .gitignore  MEGconfig.py  README.md  TODO  pyproject.toml  raw_tests.py  requirements.txt  users_utils.py
_later/bidsify_model/: 03_convert_to_bids.py  bids_conversion_config.json
_later/checkYourRaw/: raw_tests.py
_old/: bidsificator.py
config/: hardware.yaml  user.yaml
docs/: 250227_reuFosca.odt  ReuAnne_megconfig.odt  TODO  discussion_christophe.odt  meg_forp_buttons.py  parameters_to_hide.odt
examples/: megroom_intro.ipynb  test_imports.ipynb  tests.py
examples/explore_plus/: CBanditTask.py
examples/explore_plus/utils/: CBandit_parameters.py  generate_sequence.py  parallel_ports.py  ratings.py  seq_gen.py
meg-config/: MEGconfig.py
meg-config/config/: hardware.yaml
meg_config/: MEGconfig.py  _eyetracker.py  _response_buttons.py  _stim_pc.py  eyetracker.py  parallel_ports.py  response_buttons.py  room.py  stim_pc.py  utils.py
meg_config.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
meg_config/config/: config.py  hardware_config.yaml  user_config.yaml
meg_config/examples/: megroom_intro.ipynb
meg_config/examples/maxence/: expe_active.py
meg_config/tests/: 3-debugging.py
meg_room/: bidsificator.py  room.py
meg_room/bidsify/: README.md  bb_ns_to_bids.py  raw_to_bids.py
meg_room/config/: bids_config.py  config.py  hardware_config.yaml
meg_room/examples/: megroom_intro.ipynb
meg_room/examples/explore_plus/: CBanditTask.py
meg_room/tests/: 4-robustness.py  README.md  tests_hardware.py
(+15 files in other folders)
